[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beanstack"                        # Your package name
version = "0.1.0"                      # Version number
description = "A Redux-like state management library for Python"
authors = [{ name = "Ricardo Walford", email = "ricardo.walford@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/riky126/beanstack"
